# Duck-Of-Apocalypse

./: .gitignore  LICENSE  README.md
duckterm/: Cargo.toml
duckterm-ui/: package.json
duckterm-ui/src/: electron-builder.yml  index.html  main.js  preload.js  renderer.js  styles.css
duckterm/src/: app.rs  commands.rs  gui.rs  lib.rs  main.rs  session.rs
duckterm/src/backends/: local_pty.rs  mod.rs  ssh_backend.rs
